Move code in a separate file now part of clangCppInterOp.

--- a/unittests/CppInterOp/CMakeLists.txt
+++ b/unittests/CppInterOp/CMakeLists.txt
@@ -6,9 +6,10 @@ add_cppinterop_unittest(CppInterOpTests
   ScopeReflectionTest.cpp
   )
 
-clang_target_link_libraries(CppInterOpTests
+target_link_libraries(CppInterOpTests
   PRIVATE
   clingInterpreter
+  clangCppInterOp
   clangAST
   clangBasic
   clangLex
