--- a/unittests/InterOp/CMakeLists.txt
+++ b/unittests/InterOp/CMakeLists.txt
@@ -4,6 +4,7 @@ set(LLVM_LINK_COMPONENTS
 
 add_interop_unittest(InterOpTests
   ScopeReflectionTest.cpp
+  FunctionReflectionTest.cpp
   )
 
 target_link_libraries(InterOpTests
