--- a/unittests/CppInterOp/CMakeLists.txt
+++ b/unittests/CppInterOp/CMakeLists.txt
@@ -4,6 +4,7 @@ set(LLVM_LINK_COMPONENTS
 
 add_cppinterop_unittest(CppInterOpTests
   ScopeReflectionTest.cpp
+  FunctionReflectionTest.cpp
   )
 
 target_link_libraries(CppInterOpTests
