--- a/unittests/InterOp/CMakeLists.txt
+++ b/unittests/InterOp/CMakeLists.txt
@@ -5,6 +5,7 @@ set(LLVM_LINK_COMPONENTS
 add_interop_unittest(InterOpTests
   ScopeReflectionTest.cpp
   FunctionReflectionTest.cpp
+  VariableReflectionTest.cpp
   )
 
 target_link_libraries(InterOpTests
