--- a/unittests/CppInterOp/CMakeLists.txt
+++ b/unittests/CppInterOp/CMakeLists.txt
@@ -5,6 +5,7 @@ set(LLVM_LINK_COMPONENTS
 add_cppinterop_unittest(CppInterOpTests
   ScopeReflectionTest.cpp
   FunctionReflectionTest.cpp
+  VariableReflectionTest.cpp
   )
 
 target_link_libraries(CppInterOpTests
