Move Enum tests to EnumReflectionTest

--- a/unittests/CppInterOp/CMakeLists.txt
+++ b/unittests/CppInterOp/CMakeLists.txt
@@ -7,6 +7,7 @@ add_cppinterop_unittest(CppInterOpTests
   FunctionReflectionTest.cpp
   VariableReflectionTest.cpp
   TypeReflectionTest.cpp
+  EnumReflectionTest.cpp
   )
 
 target_link_libraries(CppInterOpTests
