Move Enum tests to EnumReflectionTest

--- a/unittests/InterOp/CMakeLists.txt
+++ b/unittests/InterOp/CMakeLists.txt
@@ -7,6 +7,7 @@ add_interop_unittest(InterOpTests
   FunctionReflectionTest.cpp
   VariableReflectionTest.cpp
   TypeReflectionTest.cpp
+  EnumReflectionTest.cpp
   )
 
 target_link_libraries(InterOpTests
