--- a/unittests/InterOp/CMakeLists.txt
+++ b/unittests/InterOp/CMakeLists.txt
@@ -11,6 +11,9 @@ add_interop_unittest(InterOpTests
   EnumReflectionTest.cpp
   )
 
+set_source_files_properties(Utils.cpp
+  PROPERTIES COMPILE_DEFINITIONS "LLVM_BINARY_DIR=\"${LLVM_BINARY_DIR}\"")
+
 target_link_libraries(InterOpTests
   PRIVATE
   clingInterpreter
