--- a/unittests/CppInterOp/CMakeLists.txt
+++ b/unittests/CppInterOp/CMakeLists.txt
@@ -11,6 +11,9 @@ add_cppinterop_unittest(CppInterOpTests
   EnumReflectionTest.cpp
   )
 
+set_source_files_properties(Utils.cpp
+  PROPERTIES COMPILE_DEFINITIONS "LLVM_BINARY_DIR=\"${LLVM_BINARY_DIR}\"")
+
 target_link_libraries(CppInterOpTests
   PRIVATE
   clingInterpreter
