--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -37,6 +37,13 @@ jobs:
         mkdir -p ./pr
         echo ${{ github.event.number }} > ./pr/NR
         echo ${{ github.repository }} > ./pr/REPO
+
+        CLING_HASH=$(git ls-remote git@github.com:root-project/cling.git HEAD| tr '\t' '-')
+        # FIXME: We need something like cling-llvm to bump automatically...
+        LLVM_HASH=$(git ls-remote git@github.com:root-project/llvm-project.git cling-llvm13 | tr '\t' '-')
+        echo "CLING_HASH=${CLING_HASH}" >> $GITHUB_ENV
+        echo "LLVM_HASH=${LLVM_HASH}" >> $GITHUB_ENV
+
     - uses: nelonoel/branch-name@v1.0.1
     - name: Setup compiler on Linux
       if: runner.os == 'Linux'
@@ -76,9 +83,7 @@ jobs:
       with:
         path: |
           llvm-project/build/
-        #key: ${{ runner.os }}-${{ matrix.os }}-${{ matrix.compiler }}-clang-${{ matrix.clang-runtime }}.x-patch-${{ hashFiles('patches/llvm/*') }}
-        CLING_HASH=$(git ls-remote git@github.com:root-project/cling.git HEAD| tr '\t' '-')
-        LLVM_HASH=$(git ls-remote git@github.com:root-project/llvm-project.git cling-llvm13 | tr '\t' '-')
+        #key: ...-.x-patch-${{ hashFiles('patches/llvm/*') }}
         key: ${CLING_HASH}-${LLVM_HASH}-${{ runner.os }}-${{ matrix.os }}-${{ matrix.compiler }}-clang-${{ matrix.clang-runtime }}.x
     - name: Install Cling (by CPT) on Linux
       if: runner.os == 'Linux'
