--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -94,12 +94,12 @@ jobs:
           cd llvm-project
           mkdir build
           cd build
-          cmake -DLLVM_ENABLE_PROJECTS=clang
-                -DLLVM_EXTERNAL_PROJECTS=cling
-                -DLLVM_EXTERNAL_CLING_SOURCE_DIR=../../cling
-                -DLLVM_TARGETS_TO_BUILD="host;nvptx"
-                -DCMAKE_BUILD_TYPE=RelWithDebInfo
-                -DLLVM_ENABLE_ASSERTIONS=On
+          cmake -DLLVM_ENABLE_PROJECTS=clang                  \
+                -DLLVM_EXTERNAL_PROJECTS=cling                \
+                -DLLVM_EXTERNAL_CLING_SOURCE_DIR=../../cling  \
+                -DLLVM_TARGETS_TO_BUILD="host;NVPTX"          \
+                -DCMAKE_BUILD_TYPE=RelWithDebInfo             \
+                -DLLVM_ENABLE_ASSERTIONS=On                   \
                 ../llvm
           cmake --build . --target cling --parallel $(nproc --all)
         fi
