--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -20,10 +20,10 @@ jobs:
             os: ubuntu-22.04
             compiler: gcc-9
             clang-runtime: '13'
-          - name: ubu22-gcc9-clang14
-            os: ubuntu-22.04
-            compiler: gcc-9
-            clang-runtime: '14'
+#          - name: ubu22-gcc9-clang14
+#            os: ubuntu-22.04
+#            compiler: gcc-9
+#            clang-runtime: '14'
     steps:
     - uses: actions/checkout@v3
       with:
@@ -53,7 +53,7 @@ jobs:
         os_codename="`cat /etc/os-release | grep UBUNTU_CODENAME | cut -d = -f 2`"
         sudo apt update
         if [[ "${{ matrix.compiler }}" == *"gcc"* ]]; then
-          sudo apt install -y gcc-${vers} g++-${vers}
+          sudo apt install -y gcc-${vers} g++-${vers} lld
           echo "CC=gcc-${vers}" >> $GITHUB_ENV
           echo "CXX=g++-${vers}" >> $GITHUB_ENV
         else
@@ -77,7 +77,7 @@ jobs:
         conda install -y -q -c conda-forge \
           distro \
           pytest
-    - name: Cache LLVM/Clang/Cling runtime build directory form CPT
+    - name: Cache LLVM/Clang/Cling runtime build directory
       uses: actions/cache@v3
       id: cling-build-cache
       with:
@@ -85,8 +85,7 @@ jobs:
           llvm-project/build/
         #key: ...-.x-patch-${{ hashFiles('patches/llvm/*') }}
         key: ${CLING_HASH}-${LLVM_HASH}-${{ runner.os }}-${{ matrix.os }}-${{ matrix.compiler }}-clang-${{ matrix.clang-runtime }}.x
-    - name: Install Cling (by CPT) on Linux
-      if: runner.os == 'Linux'
+    - name: Build Cling on Linux if the cache is invalid
       run: |
         if [[ "${{ steps.cling-build-cache.outputs.cache-hit }}" != "true" ]]; then
           git clone --depth=1 https://github.com/root-project/cling.git
@@ -100,11 +99,11 @@ jobs:
                 -DLLVM_TARGETS_TO_BUILD="host;NVPTX"          \
                 -DCMAKE_BUILD_TYPE=RelWithDebInfo             \
                 -DLLVM_ENABLE_ASSERTIONS=On                   \
+                -DLLVM_USE_LINKER=lld                         \
                 ../llvm
           cmake --build . --target cling --parallel $(nproc --all)
         fi
-    - name: Install InterOp on Linux
-      if: runner.os == 'Linux'
+    - name: Build and Test InterOp
       run: |
         LLVM_BUILD_DIR=$(pwd)
         # Build InterOp next to cling and llvm-project.
