--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -110,7 +110,7 @@ jobs:
         fi
     - name: Build and Test InterOp
       run: |
-        LLVM_BUILD_DIR=$(pwd)/llvm-project/build
+        LLVM_BUILD_DIR=$(pwd)/../llvm-project/build
         # Build InterOp next to cling and llvm-project.
         pwd
         mkdir build && cd build
