--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -84,7 +84,7 @@ jobs:
         path: |
           llvm-project/build/
         #key: ...-.x-patch-${{ hashFiles('patches/llvm/*') }}
-        key: $CLING_HASH-$LLVM_HASH-${{ runner.os }}-${{ matrix.os }}-${{ matrix.compiler }}-clang-${{ matrix.clang-runtime }}.x
+        key: ${{ env.CLING_HASH }}-${{ env.LLVM_HASH }}-${{ runner.os }}-${{ matrix.os }}-${{ matrix.compiler }}-clang-${{ matrix.clang-runtime }}.x
     - name: Build Cling on Linux if the cache is invalid
       run: |
         if [[ "${{ steps.cling-build-cache.outputs.cache-hit }}" != "true" ]]; then
