--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -82,7 +82,8 @@ jobs:
       id: cling-build-cache
       with:
         path: |
-          llvm-project/build/
+          llvm-project/
+          cling/
         #key: ...-.x-patch-${{ hashFiles('patches/llvm/*') }}
         key: ${{ env.CLING_HASH }}-${{ env.LLVM_HASH }}-${{ runner.os }}-${{ matrix.os }}-${{ matrix.compiler }}-clang-${{ matrix.clang-runtime }}.x
     - name: Build Cling on Linux if the cache is invalid
