--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -115,8 +115,7 @@ jobs:
         fi
     - name: Build and Test InterOp
       run: |
-        LLVM_BUILD_DIR=$(pwd)/../llvm-project/build
-        LLVM_BUILD_DIR="$(realpath $LLVM_BUILD_DIR)"
+        LLVM_BUILD_DIR="$(realpath llvm-project/build)"
         # Build InterOp next to cling and llvm-project.
         pwd
         mkdir build && cd build
