Update and use InterOp::CreateInterpreter

--- a/lib/Interpreter/CMakeLists.txt
+++ b/lib/Interpreter/CMakeLists.txt
@@ -2,3 +2,6 @@ add_llvm_library(clangInterOp OBJECT
   InterOp.cpp
  )
 
+set_source_files_properties(InterOp.cpp
+  PROPERTIES COMPILE_DEFINITIONS "LLVM_BINARY_DIR=\"${LLVM_BINARY_DIR}\"")
+
